--- a/environments/production/kustomization.yaml
+++ b/environments/production/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: application-development
+namespace: application-production
 
 resources:
   - ../../application
